Refine - Add more products

--- a/app/views/events/_more.html.slim
+++ b/app/views/events/_more.html.slim
@@ -2,7 +2,7 @@
 section#top_recommend.parallax.p-t-150.p-b-150
   .container
     div data-animation="fadeInUp" data-animation-delay="100"
-      .heading.heading.heading-center
+      .heading.heading-center
         h1.text-medium 更多推薦
         span.lead
     #blog
