--- a/app/views/events/show.amp.slim
+++ b/app/views/events/show.amp.slim
@@ -2,7 +2,7 @@
 
 - event.products.each do |product|
   /! IMAGE BLOCK
-  section
+  .products
     .row
       .product_image class="product_img_#{product.id}"
     .desc.text-right
