--- a/app/assets/stylesheets/paralax.amp.scss
+++ b/app/assets/stylesheets/paralax.amp.scss
@@ -179,7 +179,7 @@ html * {
   }
 }
 
-section {
+.products {
   .desc {
     padding: 60px;
 
@@ -245,6 +245,65 @@ section {
 
       &.rounded {
         border-radius: 3px;
+      }
+    }
+  }
+}
+
+.more {
+  width: 100%;
+  padding-bottom: 80px;
+
+  .heading {
+    margin-bottom: 80px;
+
+    &:after {
+      margin: 30px auto 0;
+      border-top: 3px solid #303030;
+      display: block;
+      margin-top: 10px;
+      width: 30px;
+      content: "";
+    }
+
+    h1 {
+      font-size: 30px;
+      font-weight: 300;
+    }
+  }
+
+  .carousel {
+    text-align: center;
+    width: 85%;
+    margin: 0 auto;
+
+    .caption {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 8px;
+      background: rgba(0, 0, 0, 0.6);
+      color: #ddd;
+      max-height: 15%;
+
+      padding-left: 15px;
+      padding-right: 15px;
+
+      .description {
+        float: left;
+        width: 70%;
+        text-align: left;
+
+        h4 { margin: 0; }
+      }
+
+      .date {
+        float: right;
+        width: 30%;
+        text-align: right;
+
+        p { margin: 0; }
       }
     }
   }
