Add - Add structured-data

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -5,7 +5,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-  <%= render partial: 'common/favicon' %>
+  <%= render 'common/favicon' %>
 
   <%= display_meta_tags %>
   <%= analytics_init if GoogleAnalytics.valid_tracker? %>
@@ -14,6 +14,11 @@
   <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
 
   <%= stylesheet_link_tag  'home', media: 'all' %>
+
+  <!-- LD JSON -->
+  <script type="application/ld+json">
+    <%= render('schemas/main.json').html_safe %>
+  </script>
 </head>
 <body id="homepage" class="wide" data-animation-icon-path="/images/">
   <!-- WRAPPER -->
