Refine - Refine AMP

--- a/app/views/amp_common/_sidebar.amp.slim
+++ b/app/views/amp_common/_sidebar.amp.slim
@@ -1,6 +1,6 @@
 amp-sidebar#sidebar layout="nodisplay" side="right"
   .logo
-    amp-img alt="home" src="#{asset_path('logos/logo@96.png')}" tabindex="0" width="96" height="96" layout="responsive"
+    amp-img alt="#{t('title')}" src="#{asset_path('logos/logo@96.png')}" tabindex="0" width="96" height="96" layout="responsive"
   .horizontal_line
   ul
     li
