--- a/app/views/layouts/paralax.html.erb
+++ b/app/views/layouts/paralax.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link rel="amphtml" href="<%= event_url(Event.where(enable: true).last.link_name, format: :amp) %>">
+  <link rel="amphtml" href="<%= event_url(event.link_name, format: :amp) %>">
 
   <%= render partial: 'common/favicon' %>
 
