--- a/app/views/amp_common/_nav.amp.slim
+++ b/app/views/amp_common/_nav.amp.slim
@@ -1,7 +1,7 @@
 .header.clearfix
   .logo
     = link_to root_path do
-      amp-img alt="home" src="#{asset_path('logos/logo@96.png')}" tabindex="0" width="32" height="32"
+      amp-img alt="#{t('title')}" src="#{asset_path('logos/logo@96.png')}" tabindex="0" width="32" height="32"
   .pull-right
     .nav-main-menu-responsive
       button.lines-button.x type="button" on="tap:sidebar.toggle"
