--- a/app/views/layouts/paralax.amp.erb
+++ b/app/views/layouts/paralax.amp.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <link rel="canonical" href="<%= event_url(Event.where(enable: true).last.link_name) %>" />
+  <link rel="canonical" href="<%= event_url(event.link_name) %>" />
 
   <%= display_meta_tags %>
 
